FINERACT-2326: Improve null-safety