@@ -33,13 +33,14 @@ import lombok.Setter;
 import lombok.ToString;
 import org.apache.fineract.infrastructure.core.serialization.gson.JsonExclude;
 import org.apache.fineract.infrastructure.core.service.MathUtil;
+import org.apache.fineract.organisation.monetary.domain.MonetaryCurrency;
 import org.apache.fineract.organisation.monetary.domain.Money;
 import org.apache.fineract.portfolio.loanproduct.domain.LoanProductMinimumRepaymentScheduleRelatedDetail;
 import org.apache.fineract.portfolio.util.Memo;
 
 @ToString(exclude = { "previous" })
 @EqualsAndHashCode(exclude = { "previous" })
-public final class RepaymentPeriod {
+public class RepaymentPeriod {
 
     @JsonExclude
     private final RepaymentPeriod previous;
@@ -52,20 +53,16 @@ public final class RepaymentPeriod {
     @Setter
     private List<InterestPeriod> interestPeriods;
     @Setter
-    @Getter
     private Money emi;
     @Setter
-    @Getter
     private Money originalEmi;
-    @Getter
     private Money paidPrincipal;
-    @Getter
     private Money paidInterest;
     @Setter
-    @Getter
     private Money futureUnrecognizedInterest;
 
     @JsonExclude
+    @Getter
     private final MathContext mc;
 
     @JsonExclude
@@ -81,18 +78,17 @@ public final class RepaymentPeriod {
     private boolean isInterestMoved = false;
 
     @Setter
-    @Getter
-    private BigDecimal totalDisbursedAmount;
+    private Money totalDisbursedAmount;
 
     @Setter
-    @Getter
-    private BigDecimal totalCapitalizedIncomeAmount;
-
+    private Money totalCapitalizedIncomeAmount;
     @JsonExclude
     @Getter
     private final LoanProductMinimumRepaymentScheduleRelatedDetail loanProductRelatedDetail;
+    @JsonExclude
+    private MonetaryCurrency currency;
 
-    private RepaymentPeriod(RepaymentPeriod previous, LocalDate fromDate, LocalDate dueDate, List<InterestPeriod> interestPeriods,
+    protected RepaymentPeriod(RepaymentPeriod previous, LocalDate fromDate, LocalDate dueDate, List<InterestPeriod> interestPeriods,
             Money emi, Money originalEmi, Money paidPrincipal, Money paidInterest, Money futureUnrecognizedInterest, MathContext mc,
             LoanProductMinimumRepaymentScheduleRelatedDetail loanProductRelatedDetail) {
         this.previous = previous;
@@ -119,34 +115,34 @@ public final class RepaymentPeriod {
         final RepaymentPeriod newRepaymentPeriod = new RepaymentPeriod(previous, fromDate, dueDate, new ArrayList<>(), emi, emi, zero, zero,
                 zero, mc, loanProductRelatedDetail);
         // There is always at least 1 interest period, by default with same from-due date as repayment period
-        newRepaymentPeriod.interestPeriods.add(InterestPeriod.withEmptyAmounts(newRepaymentPeriod, fromDate, dueDate));
+        newRepaymentPeriod.getInterestPeriods().add(InterestPeriod.withEmptyAmounts(newRepaymentPeriod, fromDate, dueDate));
         return newRepaymentPeriod;
     }
 
     public static RepaymentPeriod copy(RepaymentPeriod previous, RepaymentPeriod repaymentPeriod, MathContext mc) {
-        final RepaymentPeriod newRepaymentPeriod = new RepaymentPeriod(previous, repaymentPeriod.fromDate, repaymentPeriod.dueDate,
-                new ArrayList<>(), repaymentPeriod.emi, repaymentPeriod.originalEmi, repaymentPeriod.paidPrincipal,
-                repaymentPeriod.paidInterest, repaymentPeriod.futureUnrecognizedInterest, mc,
+        final RepaymentPeriod newRepaymentPeriod = new RepaymentPeriod(previous, repaymentPeriod.getFromDate(),
+                repaymentPeriod.getDueDate(), new ArrayList<>(), repaymentPeriod.getEmi(), repaymentPeriod.getOriginalEmi(),
+                repaymentPeriod.getPaidPrincipal(), repaymentPeriod.getPaidInterest(), repaymentPeriod.getFutureUnrecognizedInterest(), mc,
                 repaymentPeriod.getLoanProductRelatedDetail());
         // There is always at least 1 interest period, by default with same from-due date as repayment period
-        for (InterestPeriod interestPeriod : repaymentPeriod.interestPeriods) {
-            newRepaymentPeriod.interestPeriods.add(InterestPeriod.copy(newRepaymentPeriod, interestPeriod, mc));
+        for (InterestPeriod interestPeriod : repaymentPeriod.getInterestPeriods()) {
+            newRepaymentPeriod.getInterestPeriods().add(InterestPeriod.copy(newRepaymentPeriod, interestPeriod, mc));
         }
         return newRepaymentPeriod;
     }
 
     public static RepaymentPeriod copyWithoutPaidAmounts(RepaymentPeriod previous, RepaymentPeriod repaymentPeriod, MathContext mc) {
-        final Money zero = repaymentPeriod.emi.zero();
-        final RepaymentPeriod newRepaymentPeriod = new RepaymentPeriod(previous, repaymentPeriod.fromDate, repaymentPeriod.dueDate,
-                new ArrayList<>(), repaymentPeriod.emi, repaymentPeriod.originalEmi, zero, zero, zero, mc,
-                repaymentPeriod.getLoanProductRelatedDetail());
+        final Money zero = Money.zero(repaymentPeriod.getCurrency(), mc);
+        final RepaymentPeriod newRepaymentPeriod = new RepaymentPeriod(previous, repaymentPeriod.getFromDate(),
+                repaymentPeriod.getDueDate(), new ArrayList<>(), repaymentPeriod.getEmi(), repaymentPeriod.getOriginalEmi(), zero, zero,
+                zero, mc, repaymentPeriod.getLoanProductRelatedDetail());
         // There is always at least 1 interest period, by default with same from-due date as repayment period
-        for (InterestPeriod interestPeriod : repaymentPeriod.interestPeriods) {
+        for (InterestPeriod interestPeriod : repaymentPeriod.getInterestPeriods()) {
             var interestPeriodCopy = InterestPeriod.copy(newRepaymentPeriod, interestPeriod);
             if (!interestPeriodCopy.getBalanceCorrectionAmount().isZero()) {
                 interestPeriodCopy.addBalanceCorrectionAmount(interestPeriodCopy.getBalanceCorrectionAmount().negated());
             }
-            newRepaymentPeriod.interestPeriods.add(interestPeriodCopy);
+            newRepaymentPeriod.getInterestPeriods().add(interestPeriodCopy);
         }
         return newRepaymentPeriod;
     }
@@ -186,17 +182,17 @@ public final class RepaymentPeriod {
     }
 
     public Money calculateCalculatedDueInterest() {
-        Money calculatedDueInterest = getZero(mc);
-        if (!isInterestMoved) {
-            calculatedDueInterest = Money.of(emi.getCurrencyData(),
+        Money calculatedDueInterest = getZero();
+        if (!isInterestMoved()) {
+            calculatedDueInterest = Money.of(getEmi().getCurrencyData(),
                     getInterestPeriods().stream().map(InterestPeriod::getCalculatedDueInterest).reduce(BigDecimal.ZERO, BigDecimal::add),
                     mc);
         }
-        calculatedDueInterest = calculatedDueInterest.add(getFutureUnrecognizedInterest(), mc);
+        calculatedDueInterest = calculatedDueInterest.add(getFutureUnrecognizedInterest(), getMc());
         if (getPrevious().isPresent()) {
-            calculatedDueInterest = calculatedDueInterest.add(getPrevious().get().getUnrecognizedInterest(), mc);
+            calculatedDueInterest = calculatedDueInterest.add(getPrevious().get().getUnrecognizedInterest(), getMc());
         }
-        return MathUtil.negativeToZero(calculatedDueInterest, mc);
+        return MathUtil.negativeToZero(calculatedDueInterest, getMc());
     }
 
     /**
@@ -223,7 +219,7 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getEmiPlusCreditedAmountsPlusFutureUnrecognizedInterest() {
-        return getEmi().plus(getTotalCreditedAmount(), mc).plus(getFutureUnrecognizedInterest(), mc); //
+        return getEmi().plus(getTotalCreditedAmount(), mc).plus(getFutureUnrecognizedInterest(), getMc()); //
     }
 
     /**
@@ -232,7 +228,8 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getCalculatedDuePrincipal() {
-        return MathUtil.negativeToZero(getEmiPlusCreditedAmountsPlusFutureUnrecognizedInterest().minus(getCalculatedDueInterest(), mc), mc);
+        return MathUtil.negativeToZero(getEmiPlusCreditedAmountsPlusFutureUnrecognizedInterest().minus(getCalculatedDueInterest(), getMc()),
+                getMc());
     }
 
     /**
@@ -241,9 +238,9 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getCreditedPrincipal() {
-        return MathUtil.negativeToZero(interestPeriods.stream() //
+        return MathUtil.negativeToZero(getInterestPeriods().stream() //
                 .map(InterestPeriod::getCreditedPrincipal) //
-                .reduce(getZero(mc), (value, previous) -> value.plus(previous, mc)), mc); //
+                .reduce(getZero(), (value, previous) -> value.plus(previous, getMc())), getMc()); //
     }
 
     /**
@@ -252,9 +249,9 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getCreditedInterest() {
-        return MathUtil.negativeToZero(interestPeriods.stream() //
+        return MathUtil.negativeToZero(getInterestPeriods().stream() //
                 .map(InterestPeriod::getCreditedInterest) //
-                .reduce(getZero(mc), (value, previous) -> value.plus(previous, mc)), mc); //
+                .reduce(getZero(), (value, previous) -> value.plus(previous, getMc())), getMc()); //
     }
 
     /**
@@ -263,9 +260,9 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getCapitalizedIncomePrincipal() {
-        return MathUtil.negativeToZero(interestPeriods.stream() //
+        return MathUtil.negativeToZero(getInterestPeriods().stream() //
                 .map(InterestPeriod::getCapitalizedIncomePrincipal) //
-                .reduce(getZero(mc), (value, previous) -> value.plus(previous, mc)), mc); //
+                .reduce(getZero(), (value, previous) -> value.plus(previous, getMc())), getMc()); //
     }
 
     /**
@@ -275,8 +272,8 @@ public final class RepaymentPeriod {
      */
     public Money getDuePrincipal() {
         // Due principal might be the maximum paid if there is pay-off or early repayment
-        return MathUtil.max(
-                MathUtil.negativeToZero(getEmiPlusCreditedAmountsPlusFutureUnrecognizedInterest().minus(getDueInterest(), mc), mc),
+        return MathUtil.max(MathUtil
+                .negativeToZero(getEmiPlusCreditedAmountsPlusFutureUnrecognizedInterest().minus(getDueInterest(), getMc()), getMc()),
                 getPaidPrincipal(), false);
     }
 
@@ -286,7 +283,7 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getTotalCreditedAmount() {
-        return getCreditedPrincipal().plus(getCreditedInterest(), mc);
+        return getCreditedPrincipal().plus(getCreditedInterest(), getMc());
     }
 
     /**
@@ -295,7 +292,7 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getTotalPaidAmount() {
-        return getPaidPrincipal().plus(getPaidInterest());
+        return getPaidPrincipal().plus(getPaidInterest(), getMc());
     }
 
     public boolean isFullyPaid() {
@@ -309,35 +306,35 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getUnrecognizedInterest() {
-        return getCalculatedDueInterest().minus(getDueInterest(), mc);
+        return getCalculatedDueInterest().minus(getDueInterest(), getMc());
     }
 
     public Money getCreditedAmounts() {
-        return interestPeriods.stream().map(InterestPeriod::getCreditedAmounts).reduce(getZero(mc), (m1, m2) -> m1.plus(m2, mc));
+        return interestPeriods.stream().map(InterestPeriod::getCreditedAmounts).reduce(getZero(), (m1, m2) -> m1.plus(m2, getMc()));
     }
 
     public Money getOutstandingLoanBalance() {
         if (outstandingBalanceCalculation == null) {
             outstandingBalanceCalculation = Memo.of(() -> {
-                InterestPeriod lastInterestPeriod = getInterestPeriods().get(getInterestPeriods().size() - 1);
+                InterestPeriod lastInterestPeriod = getInterestPeriods().getLast();
                 Money calculatedOutStandingLoanBalance = lastInterestPeriod.getOutstandingLoanBalance() //
-                        .plus(lastInterestPeriod.getBalanceCorrectionAmount(), mc) //
-                        .plus(lastInterestPeriod.getCapitalizedIncomePrincipal(), mc) //
-                        .plus(lastInterestPeriod.getDisbursementAmount(), mc) //
-                        .minus(getDuePrincipal(), mc)//
-                        .plus(getPaidPrincipal(), mc);//
-                return MathUtil.negativeToZero(calculatedOutStandingLoanBalance, mc);
+                        .plus(lastInterestPeriod.getBalanceCorrectionAmount(), getMc()) //
+                        .plus(lastInterestPeriod.getCapitalizedIncomePrincipal(), getMc()) //
+                        .plus(lastInterestPeriod.getDisbursementAmount(), getMc()) //
+                        .plus(getPaidPrincipal(), getMc()) //
+                        .minus(getDuePrincipal(), getMc()); //
+                return MathUtil.negativeToZero(calculatedOutStandingLoanBalance, getMc());
             }, () -> new Object[] { paidPrincipal, paidInterest, interestPeriods, totalDisbursedAmount });
         }
         return outstandingBalanceCalculation.get();
     }
 
     public void addPaidPrincipalAmount(Money paidPrincipal) {
-        this.paidPrincipal = MathUtil.plus(this.paidPrincipal, paidPrincipal, mc);
+        this.paidPrincipal = MathUtil.plus(this.getPaidPrincipal(), paidPrincipal, getMc());
     }
 
     public void addPaidInterestAmount(Money paidInterest) {
-        this.paidInterest = MathUtil.plus(this.paidInterest, paidInterest, mc);
+        this.paidInterest = MathUtil.plus(this.getPaidInterest(), paidInterest, getMc());
     }
 
     public Money getInitialBalanceForEmiRecalculation() {
@@ -345,29 +342,28 @@ public final class RepaymentPeriod {
         if (getPrevious().isPresent()) {
             initialBalance = getPrevious().get().getOutstandingLoanBalance();
         } else {
-            initialBalance = getZero(mc);
+            initialBalance = getZero();
         }
         Money totalDisbursedAmount = getInterestPeriods().stream() //
                 .map(InterestPeriod::getDisbursementAmount) //
-                .reduce(getZero(mc), (m1, m2) -> m1.plus(m2, mc)); //
+                .reduce(getZero(), (m1, m2) -> m1.plus(m2, getMc())); //
         Money totalCapitalizedIncomeAmount = getInterestPeriods().stream() //
                 .map(InterestPeriod::getCapitalizedIncomePrincipal) //
-                .reduce(getZero(mc), (m1, m2) -> m1.plus(m2, mc)); //
-        return initialBalance.add(totalDisbursedAmount, mc).add(totalCapitalizedIncomeAmount, mc);
+                .reduce(getZero(), (m1, m2) -> m1.plus(m2, getMc())); //
+        return initialBalance.add(totalDisbursedAmount, getMc()).add(totalCapitalizedIncomeAmount, getMc());
     }
 
-    private Money getZero(MathContext mc) {
-        // EMI is always initiated
-        return this.emi.zero(mc);
+    public Money getZero() {
+        return Money.zero(getCurrency(), getMc());
     }
 
     public InterestPeriod getFirstInterestPeriod() {
-        return getInterestPeriods().get(0);
+        return getInterestPeriods().getFirst();
     }
 
     public InterestPeriod getLastInterestPeriod() {
         List<InterestPeriod> interestPeriods = getInterestPeriods();
-        return interestPeriods.get(interestPeriods.size() - 1);
+        return interestPeriods.getLast();
     }
 
     public Optional<InterestPeriod> findInterestPeriod(@NotNull LocalDate transactionDate) {
@@ -387,11 +383,11 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getOutstandingInterest() {
-        return MathUtil.negativeToZero(getDueInterest().minus(getPaidInterest()), mc);
+        return MathUtil.negativeToZero(getDueInterest().minus(getPaidInterest()), getMc());
     }
 
     public Money getOutstandingPrincipal() {
-        return MathUtil.negativeToZero(getDuePrincipal().minus(getPaidPrincipal()), mc);
+        return MathUtil.negativeToZero(getDuePrincipal().minus(getPaidPrincipal()), getMc());
     }
 
     public void resetDerivedComponents() {
@@ -404,21 +400,56 @@ public final class RepaymentPeriod {
      *            can be null. if null it calculates total disbursement including last interest period.
      * @return disbursed and capitalized income amount till interest period.
      */
-    public BigDecimal calculateTotalDisbursedAndCapitalizedIncomeAmountTillGivenPeriod(InterestPeriod tillPeriod) {
-        BigDecimal res = MathUtil.nullToZero(getTotalDisbursedAmount()).add(MathUtil.nullToZero(getTotalCapitalizedIncomeAmount()));
-        for (InterestPeriod interestPeriod : this.interestPeriods) {
+    public Money calculateTotalDisbursedAndCapitalizedIncomeAmountTillGivenPeriod(InterestPeriod tillPeriod) {
+        Money res = MathUtil.plus(getMc(), getTotalDisbursedAmount(), getTotalCapitalizedIncomeAmount());
+        for (InterestPeriod interestPeriod : this.getInterestPeriods()) {
             if (interestPeriod.equals(tillPeriod)) {
                 break;
             }
             if (!interestPeriod.getDueDate().equals(getFromDate())) {
                 if (interestPeriod.getDisbursementAmount() != null) {
-                    res = res.add(interestPeriod.getDisbursementAmount().getAmount());
+                    res = res.plus(interestPeriod.getDisbursementAmount(), getMc());
                 }
                 if (interestPeriod.getCapitalizedIncomePrincipal() != null) {
-                    res = res.add(interestPeriod.getCapitalizedIncomePrincipal().getAmount());
+                    res = res.plus(interestPeriod.getCapitalizedIncomePrincipal(), getMc());
                 }
             }
         }
         return res;
+    }
+
+    public MonetaryCurrency getCurrency() {
+        if (currency == null) {
+            currency = MonetaryCurrency.fromCurrencyData(loanProductRelatedDetail.getCurrencyData());
+        }
+        return currency;
+    }
+
+    public Money getEmi() {
+        return MathUtil.nullToZero(emi, getCurrency(), getMc());
+    }
+
+    public Money getOriginalEmi() {
+        return MathUtil.nullToZero(originalEmi, getCurrency(), getMc());
+    }
+
+    public Money getPaidPrincipal() {
+        return MathUtil.nullToZero(paidPrincipal, getCurrency(), getMc());
+    }
+
+    public Money getPaidInterest() {
+        return MathUtil.nullToZero(paidInterest, getCurrency(), getMc());
+    }
+
+    public Money getFutureUnrecognizedInterest() {
+        return MathUtil.nullToZero(futureUnrecognizedInterest, getCurrency(), getMc());
+    }
+
+    public Money getTotalDisbursedAmount() {
+        return MathUtil.nullToZero(totalDisbursedAmount, getCurrency(), getMc());
+    }
+
+    public Money getTotalCapitalizedIncomeAmount() {
+        return MathUtil.nullToZero(totalCapitalizedIncomeAmount, getCurrency(), getMc());
     }
 }
